# labtools

./: CONTRIBUTING.md  LICENSE  README.md  activate.sh  deactivate.sh  go.py  go.sh  pyproject.toml  pytest.ini  tox.ini
.cursor/: .keep
.dvc/: .keep
.githooks/: .keep
agents/: .keep
app/: .keep
archive/: .keep
config/: .keep
data/: .keep
docs/data/: README.md
docs/extraction/: access.md  cleanup.md  filtering.md  new-repo.md  runbook.md  scope.md  sparse-checkout.md
docs/governance/: controls.md
docs/testing/: coverage.md  matrix.md
docs/usage/: build-lab.md  core.md  data.md  docs-templates.md  environment.md  infra.md  mcp.md  quick-start.md  reports.md  runtime.md  shell.md
docs/validation/: checklist.md
models/: .keep
notebooks/: .keep
outputs/: .keep
requirements/: .keep  requirements-dev.txt  requirements-lab.txt  requirements-test.txt  requirements.txt
scratch/: .keep
scripts/: build_lab.sh
scripts/extraction/: filter_history.sh  sparse_checkout.sh
scripts/lib/: .keep
src/labtools/: __init__.py  cli.py  scaffold.py
src/labtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_build_reporter.py  test_cli.py  test_core_sync.py  test_data_sync.py  test_diagnostics_engine.py  test_docs_sync.py  test_execution_enforcer.py  test_governance_flow.py  test_hash_utils.py  test_infra_sync.py  test_manifest.py  test_mcp_sync.py  test_reports_sync.py  test_requirements_sync.py  test_run_context.py  test_runtime_sync.py  test_shell_sync.py  test_validation_runner.py
virtualenv/: .keep
(+46 files in other folders)
